--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.datasource.password=HasloDoProjektu321!
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.datasource.driver-class-name=org.postgresql.Driver
+logging.level.org.springframework.security=DEBUG
